# polyhorn

./: Cargo.toml  LICENSE  README.md
crates/casco/: Cargo.toml
crates/casco/src/: cascade.rs  concrete.rs  driver.rs  lexer.rs  lib.rs  parser.rs  proc_macro2.rs  stream.rs  stylesheet.rs  types.rs
crates/casco/src/domain/: literals.rs  mod.rs  names.rs  seqs.rs  units.rs
crates/polyhorn/: Cargo.toml
crates/polyhorn-android/: Cargo.toml
crates/polyhorn-android-sys/: Cargo.toml  build.rs
crates/polyhorn-android-sys/src/: activity.rs  bitmap.rs  bitmap_factory.rs  bridge.rs  color.rs  context.rs  geometry.rs  image_view.rs  lib.rs  logger.rs  looper.rs  reference.rs  runnable.rs  thread.rs  view.rs
crates/polyhorn-android/src/: lib.rs  prelude.rs
crates/polyhorn-android/src/components/: image.rs  mod.rs  view.rs  window.rs
crates/polyhorn-android/src/raw/: builtin.rs  component.rs  compositor.rs  container.rs  convert.rs  environment.rs  layout.rs  logger.rs  main.rs  mod.rs  platform.rs
crates/polyhorn-build/: Cargo.toml  README.md
crates/polyhorn-build-android/: Cargo.toml
crates/polyhorn-build-android/src/: lib.rs
crates/polyhorn-build-ios/: Cargo.toml
crates/polyhorn-build-ios/src/: lib.rs
crates/polyhorn-build/src/: lib.rs
crates/polyhorn-channel/: Cargo.toml
crates/polyhorn-channel/src/: lib.rs
crates/polyhorn-cli/: Cargo.toml
crates/polyhorn-cli/android/template/: build.gradle  settings.gradle
crates/polyhorn-cli/ios/template/: main.m.tmpl
crates/polyhorn-cli/src/: lib.rs
crates/polyhorn-cli/src/android/: mod.rs  spec.rs  targets.rs
crates/polyhorn-cli/src/commands/: init.rs  mod.rs  new.rs  run.rs  test.rs  watch.rs
crates/polyhorn-cli/src/core/: cargo_build.rs  cargo_rustc.rs  change_crate_type.rs  mod.rs  rasterize.rs
crates/polyhorn-cli/src/ios/: mod.rs  spec.rs
crates/polyhorn-cli/src/spec/: error.rs  mod.rs
crates/polyhorn-cli/src/template/: mod.rs
crates/polyhorn-cli/src/test/: mod.rs  snapshot.rs
crates/polyhorn-cli/template/: .gitignore.tmpl  Cargo.toml.tmpl  Polyhorn.toml.tmpl  build.rs.tmpl
crates/polyhorn-cli/template/src/: lib.rs.tmpl
crates/polyhorn-core/: Cargo.toml
crates/polyhorn-core/src/: builtin.rs  bus.rs  channel.rs  component.rs  compositor.rs  container.rs  context.rs  disposable.rs  effect.rs  element.rs  evloop.rs  hooks.rs  instance.rs  key.rs  lib.rs  link.rs  manager.rs  memory.rs  platform.rs  reference.rs  render.rs  state.rs  topology.rs  weak.rs
crates/polyhorn-ios/: Cargo.toml
crates/polyhorn-ios-sys/: Cargo.toml
crates/polyhorn-ios-sys/ios/: PLYAnimationDelegate.h  PLYAnimationDelegate.m  PLYAnimationHandle.h  PLYAnimationHandle.m  PLYAppDelegate.h  PLYAppDelegate.m  PLYCallback.h  PLYCallback.m  PLYGeometry.h  PLYImageView.h  PLYImageView.m  PLYKeyboardAvoidingView.h  PLYKeyboardAvoidingView.m  PLYKeyframeAnimation.h  PLYKeyframeAnimation.m  PLYLabel.h  PLYLabel.m  PLYLayout.h  PLYLayout.m  PLYLayoutEvent.h  PLYLayoutEvent.m  PLYScrollView.h  PLYScrollView.m  PLYSpringboard.h  PLYSpringboard.m  PLYStatusBar.h  PLYStatusBar.m  PLYTextInputView.h  PLYTextInputView.m  PLYView.h  PLYView.m  PLYViewController.h  PLYViewController.m
crates/polyhorn-ios-sys/src/: animation.rs  application.rs  callback.rs  color.rs  font.rs  geo.rs  geometry.rs  image.rs  image_view.rs  keyboard_avoiding_view.rs  label.rs  layout.rs  lib.rs  raw.rs  scroll_view.rs  status_bar.rs  text_input_view.rs  view.rs  view_controller.rs  window.rs
crates/polyhorn-ios-sys/src/coregraphics/: base.rs  geometry.rs  mod.rs
crates/polyhorn-ios-sys/src/foundation/: array.rs  attributed_string.rs  data.rs  mod.rs  number.rs  paragraph_style.rs  string.rs  value.rs
crates/polyhorn-ios-sys/src/polykit/: animation.rs  callback.rs  geometry.rs  image_view.rs  keyboard_avoiding_view.rs  label.rs  layout.rs  layout_event.rs  mod.rs  scroll_view.rs  status_bar.rs  text_input_view.rs  view.rs  view_controller.rs  window.rs
crates/polyhorn-ios-sys/src/quartzcore/: geometry.rs  mod.rs
crates/polyhorn-ios-sys/src/uikit/: application.rs  color.rs  font.rs  geometry.rs  image.rs  mod.rs  scroll_view.rs  status_bar.rs
crates/polyhorn-ios/src/: animation.rs  animator.rs  builtin.rs  bus.rs  color.rs  component.rs  compositor.rs  container.rs  context.rs  environment.rs  events.rs  font.rs  image_source.rs  layout.rs  lib.rs  markup.rs  prelude.rs
crates/polyhorn-ios/src/components/: image.rs  keyboard_avoiding_view.rs  mod.rs  modal.rs  scroll_view.rs  status_bar.rs  text.rs  text_input.rs  view.rs  window.rs
crates/polyhorn-ios/src/ffi/: mod.rs  queue.rs
crates/polyhorn-ios/src/handles/: mod.rs  view.rs
crates/polyhorn-ios/src/raw/: animator.rs  apply.rs  builtin.rs  bus.rs  component.rs  compositor.rs  container.rs  convert.rs  environment.rs  markup.rs  mod.rs  platform.rs  (+1 more)
crates/polyhorn-layout/: Cargo.toml
crates/polyhorn-layout/src/: lib.rs  style.rs
crates/polyhorn-macros/: Cargo.toml
crates/polyhorn-macros/src/: lib.rs
crates/polyhorn-style/: Cargo.toml
crates/polyhorn-style/src/: border.rs  dimension.rs  flex.rs  geometry.rs  keywords.rs  lib.rs  macros.rs  margin.rs  padding.rs  platform.rs  style.rs  text.rs
crates/polyhorn-test/: Cargo.toml
crates/polyhorn-test/src/: app.rs  automator.rs  channel.rs  client.rs  inventory.rs  lib.rs
crates/polyhorn-ui/: Cargo.toml
crates/polyhorn-ui-macros/: Cargo.toml
crates/polyhorn-ui-macros/src/: lib.rs
crates/polyhorn-ui/src/: geometry.rs  layout.rs  lib.rs  physics.rs  prelude.rs  queries.rs
crates/polyhorn/src/: lib.rs
crates/taxi/: Cargo.toml  Polyhorn.toml
crates/taxi/src/: lib.rs  navigator.rs  prelude.rs
crates/yoyo/: ACKNOWLEDGEMENTS.md  Cargo.toml
crates/yoyo-macros/: Cargo.toml
crates/yoyo-macros/src/: automaton.rs  codegen.rs  driver.rs  lib.rs  macros.rs  style.rs  to_tokens.rs  types.rs  value.rs
crates/yoyo-physics/: Cargo.toml
crates/yoyo-physics/src/: bezier.rs  curve.rs  decay.rs  delay.rs  lib.rs  sampler.rs  spring.rs  threshold.rs
crates/yoyo/src/: lib.rs  style.rs  transition.rs  utils.rs  variants.rs
(+136 files in other folders)
