[workspace]
members = [
    "crates/casco",
    "crates/polyhorn",
    "crates/polyhorn-android",
    "crates/polyhorn-android-sys",
    "crates/polyhorn-build",
    "crates/polyhorn-build-android",
    "crates/polyhorn-build-ios",
    "crates/polyhorn-core",
    "crates/polyhorn-ios",
    "crates/polyhorn-ios-sys",
    "crates/polyhorn-macros",
    "crates/polyhorn-ui",
    "crates/polyhorn-ui-macros",
    "crates/taxi",
    "crates/yoyo",
    "crates/yoyo-macros",
    "crates/yoyo-physics",
]

exclude = [
    "crates/polyhorn-cli",
]
