[package]
name = "casco"
version = "0.4.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "CSS-like parser for procedural macros."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/casco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
derivative = "2.1.1"
proc-macro2 = "1.0.19"

# lexer
logos = { version = "0.11.4", optional = true }

[features]
lexer = ["logos"]
