[package]
name = "polyhorn-android"
version = "0.4.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Polyhorn for Android."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-android"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-any = "0.2.0"
futures = "0.3.5"
jni = "0.17.0"
log = "0.4.11"
tokio = { version = "0.2.22", features = [ "stream", "sync" ] }

polyhorn-android-sys = { path = "../polyhorn-android-sys", version = "0.4.0" }
polyhorn-core = { path = "../polyhorn-core", version = "0.4.0" }
polyhorn-macros = { path = "../polyhorn-macros", version = "0.4.0" }
polyhorn-ui = { path = "../polyhorn-ui", version = "0.4.0" }
polyhorn-ui-macros = { path = "../polyhorn-ui-macros", version = "0.4.0" }
