[package]
name = "polyhorn-build-ios"
version = "0.4.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Automatically finds, compiles and links Objective-C source files."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-build-ios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.59"
