[package]
name = "polyhorn-channel"
version = "0.2.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Hooks for channels in Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-channel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
futures = "0.3.5"

polyhorn-core = { path = "../polyhorn-core", version = "0.2.0" }
