[package]
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
name = "polyhorn-cli"
version = "0.3.2"
license = "MIT"
description = "Library with CLI for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-cli"

[[bin]]
name = "polyhorn-cli"

# This discourages users from installing `polyhorn-cli` directly, instead of the
# `polyhorn` wrapper.
required-features = ["internal"]

[lib]

[dependencies]
ansi_term = "0.12.1"
cargo_metadata = "0.11.2"
clap = "=3.0.0-beta.1"
clap_derive = "=3.0.0-beta.1"
dialoguer = "0.6.2"
dirs = "3.0.1"
fs3 = "0.5.0"
futures = "0.3.8"
indicatif = "0.15.0"
inflections = "1.1.1"
notify = "4.0.15"
path-absolutize = "3.0.6"
plist = "1.0.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"
sha1 = "0.6.0"
simctl = "0.1.1"
smart-default = "0.6.0"
tinytemplate = "1.1.0"
tokio = "0.2.0"
toml = "0.5.6"
warp = "0.2.5"

# embed-resvg
resvg = { version = "0.11.0", optional = true }
usvg = { version = "0.11.0", optional = true }

[features]
internal = []
embed-resvg = ["resvg", "usvg"]

[workspace]
members = []
