[package]
name = "polyhorn-core"
version = "0.3.1"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Core types used in Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.6"
serde = "1.0.115"
