[package]
name = "polyhorn-ios-sys"
version = "0.1.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Low-level iOS bindings for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-ios-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
fsize = "0.1.0"

[build-dependencies]
polyhorn-build = { path = "../polyhorn-build", version = "0.1.0" }
