[package]
name = "polyhorn-style"
version = "0.1.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Shared types for Polyhorn style."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-style"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
derivative = "2.1.1"
