[package]
name = "polyhorn-ui-macros"
version = "0.4.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros for Polyhorn UI that turn a CSS-like specification into style structs."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/polyhorn-ui-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.19"

polyhorn-ui = { path = "../polyhorn-ui", features = ["macros"], version = "0.4.0" }
