[package]
name = "polyhorn"
version = "0.2.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "A library for rapidly building cross-platform apps in Rust."
repository = "https://github.com/polyhorn/polyhorn"
homepage = "https://polyhorn.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polyhorn"
required-features = ["binary"]

[lib]

[dependencies]
polyhorn-cli = { path = "../polyhorn-cli", version = "0.2.0", optional = true }
polyhorn-core = { path = "../polyhorn-core", version = "0.2.0" }
polyhorn-macros = { path = "../polyhorn-macros", version = "0.2.0" }

[target.'cfg(target_os = "ios")'.dependencies]
polyhorn-ios = { path = "../polyhorn-ios", version = "0.2.0" }

[features]
binary = ["polyhorn-cli"]
