[package]
name = "polyhorn"
version = "0.3.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "A library for rapidly building cross-platform apps in Rust."
repository = "https://github.com/polyhorn/polyhorn"
homepage = "https://polyhorn.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "polyhorn"

[lib]

[dependencies]
cargo-lock = "6.0.0"
serde = { version = "1.0.117", features = ["derive"] }
toml = "0.5.7"

polyhorn-core = { path = "../polyhorn-core", version = "0.3.0" }
polyhorn-macros = { path = "../polyhorn-macros", version = "0.3.0" }

[target.'cfg(target_os = "ios")'.dependencies]
polyhorn-ios = { path = "../polyhorn-ios", version = "0.3.0" }

[target.'cfg(target_os = "android")'.dependencies]
polyhorn-android = { path = "../polyhorn-android", version = "0.3.0" }
