[package]
name = "taxi"
version = "0.3.1"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Navigation library for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/taxi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
polyhorn = { path = "../polyhorn", version = "0.3.0" }
polyhorn-channel = { path = "../polyhorn-channel", version = "0.3.0" }
polyhorn-ui = { path = "../polyhorn-ui", version = "0.3.0" }
yoyo = { path = "../yoyo", version = "0.3.0" }
