[package]
name = "taxi"
version = "0.4.1"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Navigation library for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/taxi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
polyhorn = { path = "../polyhorn", version = "0.4.1" }
polyhorn-ui = { path = "../polyhorn-ui", version = "0.4.0" }
yoyo = { path = "../yoyo", version = "0.4.0" }
