[package]
name = "yoyo-macros"
version = "0.1.1"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros for Yoyo that turns a CSS-like specification into a type that implements the Variants trait."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/yoyo-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
inflections = "1.1.1"
proc-macro2 = "1.0.19"
quote = "1.0.7"
syn = "1.0.41"

casco = { path = "../casco", version = "0.1.0" }
