[package]
name = "yoyo-physics"
version = "0.3.2"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Basic physics-based primitives used in Yoyo."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/yoyo-physics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"
