[package]
name = "yoyo"
version = "0.1.1"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Animation library for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/yoyo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
num = "0.3.0"

polyhorn = { path = "../polyhorn", version = "0.1.1" }
polyhorn-channel = { path = "../polyhorn-channel", version = "0.1.0" }

yoyo-macros = { path = "../yoyo-macros", version = "0.1.0" }
yoyo-physics = { path = "../yoyo-physics", version = "0.1.0" }