[package]
name = "yoyo"
version = "0.2.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"
license = "MIT"
description = "Animation library for Polyhorn."
repository = "https://github.com/polyhorn/polyhorn/tree/crates/yoyo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
num-traits = "0.2.12"

polyhorn = { path = "../polyhorn", version = "0.2.0" }
polyhorn-core = { path = "../polyhorn-core", version = "0.2.0" }
polyhorn-channel = { path = "../polyhorn-channel", version = "0.2.0" }
polyhorn-ui = { path = "../polyhorn-ui", version = "0.2.0" }

yoyo-macros = { path = "../yoyo-macros", version = "0.2.0" }
yoyo-physics = { path = "../yoyo-physics", version = "0.2.0" }
derivative = "2.1.1"
